--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
-            <a class="navbar-brand" href="#">
+        <nav class="navbar navbar-dark navbar-expand text-light">
+            <a class="navbar-brand skeleton-loader" href="#">
                 <img src="assets/img/logo.png" width="45" height="45" alt="" loading="lazy">
-                <span class="ml-2">checkpoint4</span>
+                <span class="ml-2 px-2">Inspire</span>
             </a>
+
         </nav>
     </header>
     <main class="container">
@@ -29,6 +30,7 @@
             <p><small>Made with love by Codeworks</small></p>
         </div>
     </footer>
+
 
     <script src="app/main.js" type="module"></script>
 </body>
