--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
         <div class="row" id="mid-page">
             <div class="mt-5 col-12 text-center">
-                <span class="tall-text text-center  text" id="clock">3:00 PM</span>
+                <span class="tall-text text-center text" style="font-family:  Verdana, sans-serif;" id="clock">3:00
+                    PM</span>
                 <p class="text-center text"><span id="clock-msg">Good Afternoon</span>, Dude!</p>
             </div>
 
@@ -87,14 +88,15 @@
                     <div class=" col-11">
 
 
-                        <div class="card textR">
+                        <div class="card textR px-3 py-2">
                             <div class="row">
                                 <div class="col-12  py-1">
                                     <h4>ToDo List</h4>
+                                    <hr class="hrb">
                                 </div>
 
                             </div>
-                            <div class="row">
+                            <div class="row pb-1">
                                 <div class="col-12" id="todo-list">
                                     <li class="ml-1">Take a walk</li>
                                     <li class="ml-1">Finish Project</li>
@@ -102,7 +104,7 @@
                                 </div>
                             </div>
                             <form class="form-inline" onsubmit="app.todosController.addTodo()">
-                                <div class="form-group mx-sm-1 mb-1">
+                                <div class="form-group mx-sm-1 mb-2">
                                     <input type="text" class="form-control" id="new-todo" placeholder="To Do Item"
                                         name="description">
                                 </div>
