--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             </div>
             <div class="col-3">
                 <div class="row">
-                    <div class=" col-11">
+                    <div class=" col-12">
 
 
-                        <div class="card textR px-3 py-2">
+                        <div class="card text bg-info text-light hrb px-3 py-2">
                             <div class="row">
-                                <div class="col-12  py-1">
+                                <div class="col-12">
                                     <h4>ToDo List</h4>
                                     <hr class="hrb">
                                 </div>
