delete button working

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12" id="todo-list">
-                                    <div class="row">
+                                <div class="col-12">
+                                    <div class="row" id="todo-list">
                                         <div class="col-9 offset-1">
                                             <input class="form-check-input todos" type="checkbox"
                                                 value="${this.completed}">
