deleting not 100% but like 90%

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                                 placeholder="To Do Item" name="description" required min-length="3"
                                                 maxlength="25">
                                         </div>
-                                        <div class="col-2  pr-2 mt-2">
+                                        <div class="col-2 mt-2">
                                             <button type="submit" class="btn btn-primary border text mb-2">+</button>
                             </form>
                         </div>
