--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <h4>ToDo List</h4>
+                                    <span id="tasks-status" class="text-light text-shadow">0/3</span>
                                     <hr class="hrb">
                                 </div>
                             </div>
