--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="offset col-6 text-center text-light  justify-content-center">
                 <div class="row ">
                     <div class="col-12 my-4"></div>
-                    <div class="col-12 text authorH">
+                    <div class="col-12 text authorH" onclick="app.quotesController.getNewQuote()">
                         <span id="quote-area">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aut qui quae
                             corporis
                             adipisci
